<package format="3">
  <name>pid_position_follow</name>
  <version>0.0.1</version>
  <description>pid_position_follow is a package to follow a trajectory using PID control.</description>
  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>MIT</license>
  <author email="your.email@example.com">Your Name</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rm_decision_interfaces</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>